<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/admin_refresh"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stats"
        android:title="@string/admin_stats"
        android:icon="@drawable/ic_star"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_sample"
        android:title="@string/admin_add_sample"
        android:icon="@drawable/ic_person"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="Cerrar Sesión"
        android:icon="@drawable/ic_close"
        app:showAsAction="never" />

</menu>

